Create command to define attribute as scopable

--- a/Resources/config/services-ee.yml
+++ b/Resources/config/services-ee.yml
@@ -1,6 +1,7 @@
 parameters:
     pim_devtoolbox.remover.force_attribute.class: Pim\Bundle\DevToolboxBundle\Remover\ForceAttributeRemover
     pim_devtoolbox.doctrine.completeness_generator.class: Pim\Bundle\DevToolboxBundle\Doctrine\ORM\PublishedCompletenessGenerator
+    pim_devtoolbox.updater.attribute_scopabilizer.class: Pim\Bundle\DevToolboxBundle\Updater\AttributeScopabilizer
 
 services:
     pim_devtoolbox.manager.published_completeness:
@@ -30,3 +31,14 @@ services:
             - %pimee_workflow.entity.published_product.class%
             - %pimee_workflow.entity.published_product_value.class%
             - %pim_catalog.entity.attribute.class%
+
+    pim_devtoolbox.updater.attribute_scopabilizer:
+        class: %pim_devtoolbox.updater.attribute_scopabilizer.class%
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@pim_catalog.remover.group'
+            - %pim_catalog.entity.group.class%
+            - %pim_catalog.entity.product_value.class%
+            - %pimee_workflow.entity.published_product_value.class%
+            - '@pim_catalog.manager.completeness'
+            - '@pim_devtoolbox.manager.published_completeness'
