--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpspec/phpspec": "2.0.*@dev",
         "henrikbjorn/phpspec-code-coverage": "1.0.*@dev",
-        "fabpot/php-cs-fixer": "@stable",
+        "friendsofphp/php-cs-fixer": "@stable",
         "squizlabs/php_codesniffer": "1.*",
         "pdepend/pdepend": "1.1.*",
         "phpmd/phpmd": "1.*"
